--- a/home.html
+++ b/home.html
@@ -34,6 +34,7 @@
             background-color: #fff;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            text-align: center; /* Center the iframe */
         }
 
         /* You can add more styling for your content here */
@@ -66,12 +67,10 @@
     </header>
 
     <div class="container">
-        <h2>Welcome to GinitiPins!</h2>
-        <p>This is the home page for GinitiPins. You can add your content here.</p>
-        <p>Feel free to customize this page with your amazing pins and ideas!</p>
+        <h2>Featured Pin</h2>
+        <iframe src="https://assets.pinterest.com/ext/embed.html?id=714172453441143953" height="714" width="345" frameborder="0" scrolling="no" ></iframe>
 
-        <h2>Getting Started</h2>
-        <p>You can start adding your content by modifying the HTML within the <code>&lt;div class="container"&gt;</code> tags.</p>
+        <p>Check out this awesome pin!</p>
     </div>
 
     <footer>
