--- a/home.html
+++ b/home.html
@@ -71,6 +71,7 @@
         <iframe src="https://assets.pinterest.com/ext/embed.html?id=714172453441143953" height="714" width="345" frameborder="0" scrolling="no" ></iframe>
         <iframe src="https://assets.pinterest.com/ext/embed.html?id=714172453452211909" height="652" width="345" frameborder="0" scrolling="no" ></iframe>
         <iframe src="https://assets.pinterest.com/ext/embed.html?id=714172453452211930" height="654" width="345" frameborder="0" scrolling="no" ></iframe>
+        <iframe src="https://assets.pinterest.com/ext/embed.html?id=145733737935276544" height="336" width="236" frameborder="0" scrolling="no" ></iframe>
 
         <p>Check out this awesome pin!</p>
     </div>
