--- a/home.html
+++ b/home.html
@@ -145,6 +145,15 @@
                     </p>
                 </div>
 
+                <!-- Shilpa Shetty Kundra Post -->
+                <div class="flex flex-col items-center">
+                    <h3 class="text-xl font-semibold text-white mb-2">Shilpa Shetty Kundra’s Sizzling Post</h3>
+                <iframe width="928" height="522" src="https://www.youtube.com/embed/U7itvhcGwGk" title="ANI FILES CASE ON YOUTUBERS! FREEDOM OF SPEECH VIOLATED? #lawchakra #supremecourtofindia #aninews" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                  <p class="text-gray-500 text-sm mt-4 text-center">
+                        Note: If the post doesn't load, it may have been removed or is unavailable on Instagram.
+                    </p>
+                </div>
+                
                 <!-- Placeholder for Future Posts -->
                 <!-- Add future Instagram embeds here in the same format as above -->
             </div>
