--- a/home.html
+++ b/home.html
@@ -168,7 +168,7 @@
                 <div class="flex flex-col items-center">
                     <h3 class="text-xl sm:text-lg font-semibold text-white mb-2">Hiba Nawab Cleavage Show</h3>
                     <div class="video-container">
-                        <iframe src="https://www.youtube.com/embed/ssSQN5E1wn0" title="Hiba Nawab Cleavage Show" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen referrerpolicy="strict-origin-when-cross-origin"></iframe>
+                        <iframe width="928" height="522" src="https://www.youtube.com/embed/UWZSvmxqXOA" title="Paper Analysis | CA Inter  May 25 | Paper - 3 DT &amp; IDT | CA TUSHAR TAPARIA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                         <div class="video-fallback"></div>
                     </div>
                     <p class="text-gray-500 text-sm sm:text-xs mt-4 text-center">
