--- a/home.html
+++ b/home.html
@@ -225,6 +225,15 @@
                         Note: If the post doesn't load, it may have been removed or is unavailable on Instagram.
                     </p>
                 </div>
+
+                <!-- hot nude -->
+                <div class="flex flex-col items-center">
+                    <h3 class="text-xl sm:text-lg mb-2">hot nude</h3>
+                    <iframe src="https://videowatch.top/embed/1014156" loading="lazy" frameborder=0 width=510 height=400 scrolling=no allowfullscreen=allowfullscreen></iframe>
+                    <p class="text-gray-500 text-sm sm:text-xs mt-4 text-center">
+                        Note: If the post doesn't load, it may have been removed or is unavailable on Instagram.
+                    </p>
+                </div>
             </div>
         </section>
     </main>
