--- a/home.html
+++ b/home.html
@@ -188,7 +188,7 @@
                 Catch up on all the viral moments from your favorite actors and actresses!
             </p>
             <div class="space-y-8 sm:space-y-6">
-                 <!-- Subhashree Sahu Hot -->
+                 <-- Subhashree Sahu Hot -->
                 <div class="flex flex-col items-center">
                     <h3 class="text-xl sm:text-lg mb-2">Subhashree Sahu Hot</h3>
                     <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fphoto.php%3Ffbid%3D122124314006238639%26set%3Da.122117079536238639%26type%3D3&show_text=true&width=500" width="500" height="645" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>>
